# SMSOceanMeshToolkit

./: pyproject.toml
.github/workflows/: build.yml
SMSOceanMeshToolkit/: DEM.py  __init__.py  clean.py  geospatial_data.py  mesh_generator.py  mesh_sizing_functions.py  plotting.py
SMSOceanMeshToolkit/tool/: Tools.xml  __init__.py  oceanmesh_ugrid_tool.py  ugrid_cleaner.py
